--- a/.gitignore
+++ b/.gitignore
@@ -70,4 +70,4 @@ launcher-*.log
 # --------------------------------------------------
 # Project-specific ignores
 # --------------------------------------------------
-friends-launcher-logo.ico
+##### friends-launcher-logo.ico
