Added hash sha256 of dweb to launcher

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ launcher-*.log
 # Project-specific ignores
 # --------------------------------------------------
 ##### friends-launcher-logo.ico
+build-windows.yml
